fix: overflow iframe

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -99,3 +99,10 @@
   margin: 0;
 }
 
+.webgl {
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
+}
+
