--- a/src/assets/scroll-earth.scss
+++ b/src/assets/scroll-earth.scss
@@ -13,10 +13,6 @@
   align-items: center;
   justify-content: center;
 
-  .webgl {
-    position: absolute;
-  }
-
   .projects {
     position: relative;
     width: 100%;
